@@ -219,5 +219,8 @@ insert into parameters (name, description, category_id) select "backupdelay", "h
 insert into parameters (name, description, category_id) select "zones_share_keys", "do all zones on this policy share the same keys", id from categories where name="keys";
 insert into parameters (name, description, category_id) select "registrationdelay", "Dr", id from categories where name="parent";
 
+insert into parameters (name, description, category_id) select "manual_rollover", "Do not automatically roll ksks when their time is up", id from categories where name="ksk";
+insert into parameters (name, description, category_id) select "manual_rollover", "Do not automatically roll zsks when their time is up", id from categories where name="zsk";
+
 insert into parameters (name, description, category_id) select "audit", "placeholder for audit tag", id from categories where name="audit";
 COMMIT;
